fix leeter spacing btn

--- a/src/assets/overrides/_btns.scss
+++ b/src/assets/overrides/_btns.scss
@@ -1,6 +1,7 @@
 .v-btn {
 	text-transform: inherit !important;
 	font-weight: 700 !important;
+    letter-spacing: 0 !important;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
